# AutoDJ

./: .containerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  codecov.yml  commitlint.config.cjs  compose.yaml  config.local.toml.linux.example  config.local.toml.windows.example  config.toml  config.toml.example  eslint.config.js  osv-scanner.toml  package.json  presets.toml.example  pyproject.toml  renovate.json  vite.config.js  vitest.config.js
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  mutation.yml  release.yml  security.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-faiss-for-vector-search.md  0003-browser-driven-playback.md
scripts/: ci_pytest.py  profile_analyse.py
src/autodj/: __init__.py  _bridge.py  audio_meta.py  beat_sync.py  beets.py  cli.py  compute.py  config.py  daypart.py  dj_cues_import.py  dj_meta.py  explain.py  genres.py  indexer.py  jobs.py  liners.py  model.py  mood_arc.py  player.py  presets.py  profiles.py  runtime_state.py  server.py  similarity.py  stats.py  transitions.py
src/autodj/static/: app.css  app.js  bitcrusher-worklet.js  freeze-worklet.js  glitch-worklet.js  index.html  stutter-worklet.js
src/autodj/static/modules/: audio-engine.js  badges.js  camelot-wheel.js  cues.js  dom-helpers.js  hotkeys.js  library-jobs.js  liners.js  live-region.js  lyrics.js  media-session.js  queue.js  search.js  settings-panel.js  show-when.js  tabs.js
tests/: conftest.py
tests/fuzz/: conftest.py  test_audio_meta_fuzz.py
tests/integration/: _helpers.py  conftest.py  test_bridge_branches.py  test_index_pipeline.py  test_server.py  test_server_branches.py  test_server_recent.py
tests/jsmodules/: audio-engine-di.test.js  audio-engine-network.test.js  cues.test.js  dom-helpers.test.js  live-region.test.js  settings-panel.test.js
tests/playwright/: health_audit.mjs  hotkey_audit.mjs  regression_audit.mjs  transition_audit.mjs
tests/smoke/: test_cli_smoke.py
tests/unit/: test_audio_meta.py  test_audio_meta_branches.py  test_audio_meta_extras.py  test_beat_sync.py  test_beets.py  test_cli.py  test_cli_more.py  test_compute_branches.py  test_config.py  test_coverage_boost.py  test_daypart.py  test_dj_cues.py  test_dj_cues_import.py  test_dj_meta.py  test_explain.py  test_genres.py  test_indexer.py  test_indexer_more.py  test_jobs.py  test_liners.py  test_model.py  test_mood_arc.py  test_player.py  test_presets.py  test_profiles.py  test_runtime_state.py  test_similarity.py  test_stats.py  test_transitions.py
