[project]
name = "autodj"
version = "0.1.0"
description = "AI-powered local music continuity player using MERT embeddings and FAISS similarity search"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "transformers>=4.40.0",   # MERT model loading
    "torch>=2.2.0",           # MERT inference (CPU or CUDA)
    "librosa>=0.10.0",        # spectral/chroma audio feature extraction
    "faiss-cpu>=1.8.0",       # fast nearest-neighbor vector search
    "numpy>=1.26.0",          # vector math
    "soundfile>=0.12.0",      # audio file decoding
    "sounddevice>=0.4.6",     # cross-platform audio playback
    "click>=8.1.0",           # CLI framework
    "rich>=13.0.0",           # terminal UI (panels, progress bars, live display)
    "tqdm>=4.66.0",           # progress bars during indexing
    "requests>=2.31.0",       # model checkpoint auto-download fallback
    "pynput>=1.7.6",          # keyboard listener for playback controls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",    # property-based testing for vector math
]

[project.scripts]
autodj = "autodj.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=autodj --cov-report=term-missing --basetemp=tmp"
filterwarnings = [
    # Suppress DeprecationWarnings from FAISS SWIG bindings (third-party, not fixable)
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/autodj"]
