[project]
name = "autodj"
version = "0.14.0"
description = "AI-powered local music continuity player using MuQ embeddings and FAISS similarity search"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "blindndangerous" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
# Core dependencies — minimum needed for the lighter commands
# (`enrich`, `prune`, `stats`, `playlist`).  Index + play + serve add
# heavier deps via optional groups below.  This split lets a NAS or
# headless host run `autodj enrich` against a shared index without
# installing torch, librosa, or audio libs.
dependencies = [
    "faiss-cpu>=1.8.0", # nearest-neighbor vector search
    "numpy>=1.26.0", # vector math
    "click>=8.1.0", # CLI framework
    "rich>=13.0.0", # terminal UI (panels, tables)
    "python-multipart>=0.0.27",
    "librosa>=0.11.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# `uv pip install -e ".[index]"` — build the FAISS index from audio files
index = [
    "muq>=0.1.0",                # MuQ embedding model (24 kHz, 1024-dim)
    "torch>=2.2.0",              # MuQ inference (CPU or CUDA)
    "huggingface_hub>=0.23.0",   # model checkpoint download
    "librosa>=0.10.0",           # spectral / chroma feature extraction
    "soundfile>=0.12.0",         # audio file decoding
    "tqdm>=4.66.0",              # progress bars
]

# `uv pip install -e ".[play]"` — playback (terminal player)
play = [
    "librosa>=0.10.0",           # resample at play time
    "soundfile>=0.12.0",         # decode FLAC / WAV
    "sounddevice>=0.4.6",        # cross-platform audio output
    "pynput>=1.7.6",             # keyboard listener
    "mutagen>=1.47.0",           # ReplayGain tags, cover art, LRC sidecar
    "scipy>=1.13.0",             # biquad filters (EQ duck, sweeps, transitions)
]

# `uv pip install -e ".[web]"` — browser UI on top of `play`
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",            # request/response models in server.py
]

# Convenience meta-group — install everything (Linux GPU box, full Windows install)
all = [
    "muq>=0.1.0", "torch>=2.2.0", "huggingface_hub>=0.23.0",
    "librosa>=0.10.0", "soundfile>=0.12.0", "tqdm>=4.66.0",
    "sounddevice>=0.4.6", "pynput>=1.7.6", "mutagen>=1.47.0", "scipy>=1.13.0",
    "fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.0.0",
]

# Dev / test deps
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",    # property-based testing for vector math
    "pytest-asyncio>=1.0.0",  # async test support for FastAPI broadcast loop
    "pytest-timeout>=2.3.0",  # default timeout so audio / playwright tests can't hang CI
]

[project.scripts]
autodj = "autodj.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/fuzz runs in the nightly Fuzz workflow only — slow Hypothesis
# loops are skipped during the per-PR test step.
addopts = "--cov=autodj --cov-report=term-missing --basetemp=tmp --timeout=60 --ignore=tests/fuzz"
asyncio_mode = "auto"
filterwarnings = [
    # Suppress DeprecationWarnings from FAISS SWIG bindings (third-party, not fixable)
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/autodj"]

[tool.coverage.report]
fail_under = 96
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    # Defensive metadata-parser fallbacks: malformed tags, missing
    # libraries, or unusual encodings.  Tested via real-world tag
    # variety in the index step; not via crafted broken files in unit
    # tests.
    "except ImportError:",
    "except \\(OSError, ValueError, TypeError",
    "except \\(IndexError, TypeError\\):",
    "except \\(AttributeError, IndexError, TypeError\\):",
    "except \\(IndexError, AttributeError, UnicodeDecodeError\\):",
    "except \\(AttributeError, ValueError\\):",
    "except AttributeError:",
    "except \\(IndexError, AttributeError, TypeError\\):",
    "except \\(TypeError, ValueError\\):",
    "except \\(TypeError, AttributeError\\):",
    "except \\(KeyError, TypeError\\):",
    "except \\(TypeError, UnicodeDecodeError\\):",
    "except OSError:",
    "except FileNotFoundError:",
    "except \\(OSError, FileNotFoundError\\):",
    "except \\(OSError,",
    "if not _HAVE_LIBROSA",
    "if librosa is None",
    "if torch.cuda.is_available\\(\\):",
    "if not torch.cuda.is_available\\(\\):",
    "except SimilarityError:",
    "except \\(ValueError, RuntimeError\\):",
    "except \\(OSError, ValueError\\) as exc:",
    "except Exception as exc:",
    # CLI fatal-error and interactive prompt paths -- exercised in
    # smoke tests, not unit tests.
    "sys\\.exit\\(1\\)",
    "console_?\\.print\\(.*Multiple matches",
    "except \\(click\\.Abort, EOFError\\):",
    "if open_browser:",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (likely bugs and design issues)
    "C4",  # flake8-comprehensions (unnecessary comprehension patterns)
    "SIM", # flake8-simplify (simplifiable expressions)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "SIM108", # ternary operator — sometimes less readable
    "B008",   # function calls in default args — FastAPI uses this pattern
    "RUF001", # en-dash in strings — intentional display characters throughout
    "RUF002", # en-dash in docstrings — intentional (documenting accepted separators)
    "RUF003", # en-dash / × in comments — intentional (display labels, math notation)
]

[tool.ruff.lint.isort]
known-first-party = ["autodj"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
files = ["src/autodj"]
strict = false
ignore_missing_imports = true   # many deps lack stubs (torch, faiss, librosa…)
warn_unused_ignores = true
warn_return_any = false         # too noisy with untyped third-party libs
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# ---------------------------------------------------------------------------
# Pyright — cross-check type checker (mypy is primary)
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src/autodj"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Bandit — security linter
# ---------------------------------------------------------------------------
[tool.deptry]
# Treat the package itself as a first-party import so DEP003 doesn't
# fire on every ``from autodj.x import y`` statement inside the source
# tree.  All third-party deps are pinned in [project.dependencies] +
# [project.optional-dependencies].
known_first_party = ["autodj"]
extend_exclude = ["tests", "tmp"]

[tool.deptry.per_rule_ignores]
# DEP002 -- declared but never imported by name.  python-multipart is
# a transitive runtime dep that FastAPI uses for form uploads.  pytest
# / pytest-cov / pytest-mock / pytest-asyncio / hypothesis are test
# tools loaded by pytest itself, not imported in src/.
DEP002 = [
    "python-multipart",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-timeout",
    "hypothesis",
]

[tool.vulture]
paths = ["src/autodj"]
min_confidence = 80
exclude = ["tests/", "tmp/"]
ignore_decorators = ["@app.route", "@app.get", "@app.post", "@app.websocket", "@pytest.fixture"]
# `set_playback_settings` collects all of its keyword params into a
# locals()-derived dict and dispatches via per-helper readers, so the
# raw parameter name is never referenced directly by vulture's heuristic.
ignore_names = ["replaygain_enabled", "transition_fx"]

[tool.interrogate]
fail-under = 95
exclude = ["tests", "tmp", "build"]
ignore-init-method = true
ignore-private = true
ignore-nested-functions = true
verbose = 1

[tool.bandit]
targets = ["src/autodj"]
exclude_dirs = ["tests", "tmp"]
skips = [
    "B101",  # assert statements — fine in production code here (not a web endpoint)
    "B311",  # random.choice — used only for non-security purposes (picking a random song)
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.0.0",
    "pyright>=1.1.380",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "vulture>=2.16",         # dead-code detector
    "deptry>=0.20",          # dep declaration auditor
    "xenon>=0.9",            # cyclomatic complexity gate
    "interrogate>=1.7",      # docstring coverage gate
    "radon>=6.0",            # complexity / maintainability metrics (xenon backend)
    "pytest-xdist>=3.6.0",   # parallel test execution
    "pip-licenses>=5.0",     # license auditor
    "mutmut>=3.0",           # mutation testing (weekly workflow only)
]
